--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ atomicwrites==1.4.0
 backports.weakref==1.0.post1
 brotlipy==0.7.0
 certifi==2023.7.22
-clyent==1.2.2
+clyent
 conda-repo-cli==1.0.75
 conda-verify==3.4.2
 constantly==15.1.0
