--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ backports.weakref==1.0.post1
 brotlipy==0.7.0
 certifi==2023.7.22
 clyent
-conda-repo-cli==1.0.75
+conda-repo-cli
 conda-verify==3.4.2
 constantly==15.1.0
 cssselect==1.1.0
